--- a/template/index.html
+++ b/template/index.html
@@ -51,7 +51,7 @@
     <meta name="theme-color" content="#ffffff">
     <title>NKN WALLET</title>
     <link rel="stylesheet" type="text/css" href="@@CDN@@/load.css" />
-    <link ref="stylesheet" href="@@CDN@@/bundle.css" />
+    <link ref="stylesheet" type="text/css" href="@@CDN@@/bundle.css" />
   </head>
   <body>
     <div id="root">
