--- a/template/index.html
+++ b/template/index.html
@@ -63,6 +63,6 @@
         </div>
       </div>
     </div>
-    <script src="@@CDN@@/bundle.js"></script>
+    <script src="@@CDN@@/js/bundle.js"></script>
   </body>
 </html>
