fix: add static address

--- a/template/index.html
+++ b/template/index.html
@@ -50,8 +50,8 @@
     <meta name="msapplication-TileImage" content="/src/images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <title>NKN WALLET</title>
-    <link rel="stylesheet" type="text/css" href="/load.css" />
-    <link ref="stylesheet" type="text/css" href="/bundle.css" />
+    <link rel="stylesheet" type="text/css" href="/static/load.css" />
+    <link ref="stylesheet" type="text/css" href="/static/bundle.css" />
   </head>
   <body>
     <div id="root">
@@ -63,6 +63,6 @@
         </div>
       </div>
     </div>
-    <script src="/js/bundle.js"></script>
+    <script src="/static/js/bundle.js"></script>
   </body>
 </html>
