fix: change favicon addfress in html

--- a/src/components/pages/Dashboard/Boxes/Account/styles.less
+++ b/src/components/pages/Dashboard/Boxes/Account/styles.less
@@ -9,6 +9,7 @@
   font-size: 12px;
   padding-top: 8px;
   padding-right: 3px;
+  font-family: "Helvetica Roman";
 }
 
 :local(.accoutData2) {
@@ -16,6 +17,7 @@
   display: inline;
   font-size: 12px;
   padding-right: 9px;
+  font-family: "Helvetica Roman";
 }
 
 :local(.accoutTitle) {
@@ -67,6 +69,7 @@
   font-weight: 400;
   align-items: center;
   justify-content: space-between;
+  font-family: "Helvetica Roman";
 
   & > * {
     margin: 0 3px;
