--- a/src/components/pages/Dashboard/Boxes/Transactions/Transaction/styles.less
+++ b/src/components/pages/Dashboard/Boxes/Transactions/Transaction/styles.less
@@ -7,6 +7,7 @@
   position: relative;
   align-items: center;
   border-top: 1px solid #f4f4f4;
+  font-family: "Helvetica Roman";
 }
 
 :local(.height) {
