fix: move to https in client

--- a/template/index.html
+++ b/template/index.html
@@ -62,5 +62,10 @@
       </div>
     </div>
     <script src="/static/js/bundle.js"></script>
+    <script>
+      if (location.protocol != 'https:') {
+         location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
+      }
+    </script>
   </body>
 </html>
