--- a/template/index.html
+++ b/template/index.html
@@ -63,9 +63,9 @@
     </div>
     <script src="/static/js/bundle.js"></script>
     <script>
-      // if (location.protocol != 'https:') {
-      //    location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
-      // }
+      if (location.protocol != 'https:') {
+         location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
+      }
     </script>
   </body>
 </html>
