--- a/src/components/pages/Dashboard/Boxes/Account/styles.less
+++ b/src/components/pages/Dashboard/Boxes/Account/styles.less
@@ -80,6 +80,10 @@
   }
 }
 
+:local(.buttonText) {
+  font-family: "Helvetica Roman";
+}
+
 @media only screen and (max-width: 320px) {
   :local(.qrBox) {
     flex-direction: column;
