--- a/src/components/pages/Download/styles.less
+++ b/src/components/pages/Download/styles.less
@@ -43,7 +43,7 @@
 }
 
 :local(.value) {
-  width: 620px;
+  width: 100%;
   height: 39px;
   font-size: 12px;
   margin-top: 13px;
@@ -84,4 +84,24 @@
 :local(.note) {
   color: @grey;
   font-size: 14px;
+}
+
+@media only screen and (max-width: 700px) {
+  :local(.container) {
+    text-align: center;
+    margin: 0 10px;
+  }
+
+  :local(.values) {
+    width: 90%;
+  }
+
+  :local(.value) {
+    overflow-x: scroll;
+    padding-left: 8px;
+  }
+
+  :local(.walletIconContainer) {
+    margin-top: 20px;
+  }
 }
