--- a/src/components/pages/Modals/PrivateKey/Show/styles.less
+++ b/src/components/pages/Modals/PrivateKey/Show/styles.less
@@ -38,6 +38,7 @@
   height: 34px;
   color: #5093e4;
   font-size: 14px;
+  cursor: pointer;
   border-radius: 2.3px;
   background-color: #e1efff;
   font-family: "Helvetica Bold";
